2008-11-24  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c: (save_options): Save the include-pointer
	setting to GConf.

2008-11-18  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (try_check_file):
	Plug some other memory leaks.

2008-11-18  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (save_folder_to_gconf):
	Plug a memory leak.

2008-11-10  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (create_interactive_dialog): set a meaningful
	title for the interactive dialog (#434581).

2008-11-10  Cosimo Cecchi  <cosimoc@gnome.org>

	* screenshot-utils.c: (screenshot_get_pixbuf): fix the mouse
	cursor overlay position when not in fullscreen mode (#559594).

2008-11-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (main): always use the delay command line
	argument if present (follow-up to #554114).

2008-11-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.ui: move the "Copy to Clipboard" button on
	the left of the "Cancel" one, as for HIG (#554805).

2008-11-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (check_file_done), (try_check_file),
	(prepare_screenshot), (get_desktop_dir):
	Always use URIs to build the GFile when checking for existance.
	Don't show an error message when the file-chooser can't find the
	parent directory of the last saved position. (#321944).

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (main):
	Only delay the screenshot when in interactive mode (#554114).

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (save_callback):
	Fixed a typo in a string (#551440).

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (try_check_file):
	Don't free NULL errors, as it makes a warning.

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (finish_prepare_screenshot):
	Simplify the code a bit. Thanks to Paolo Borelli.

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>
